added all refs to packages

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -8,7 +8,7 @@ library(shiny)
 
 Building a robust, maintenable and shareable Shiny application will be made possible by building an R package.
 
-In the next chapter you will be introduced to the `{golem}` package, which is __an opinionated framework for building production-ready Shiny Applications__—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.
+In the next chapter you will be introduced to the `{golem}` [@R-golem] package, which is __an opinionated framework for building production-ready Shiny Applications__—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.
 
 But in a world where Shiny Applications are mostly created as a series of files, why bother with a package? 
 
@@ -267,7 +267,7 @@ Also, how do you work smoothly in a context where you have to scroll from `slide
 
 #### A bite-sized code base
 
-Build your application through multiple smaller application, easier to understand, develop and maintain, using shiny modules.
+Build your application through multiple smaller application, easier to understand, develop and maintain, using `{shiny}` [@R-shiny] modules.
 
 We assume that you know the R saying that _"if you copy and paste something more than twice, you should make a function"_.
 Then, how do we refactor the partially repetitive piece of code so that it is reusable?
@@ -630,7 +630,7 @@ For example:
 Similarly to the "stratégie du petit r", we can create an R6 object, which is passed along inside the modules. 
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements. 
-All this will be explained in details in chapter [Reactivity anti-patterns](#optim-caveat) of this book, and you can find an example of this pattern inside the [{hexmake}](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) application.
+All this will be explained in details in chapter [Reactivity anti-patterns](#optim-caveat) of this book, and you can find an example of this pattern inside the [`{hexmake}` [@R-hexmake]](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) application.
 
 ## Structuring your app 
 
@@ -644,7 +644,7 @@ This has no other use case than your interactive application: it is not meant to
 
 + Business logic is the components with the core algorithms and functions that make your application specific to your area of work. 
 You can recognize these elements as the ones that can be run outside any interactive context. 
-This is the case for specific computation and algorithm, custom plot or `geom` for `{ggplot2}` [@ggplot22016], specific calls to a database, etc. 
+This is the case for specific computation and algorithm, custom plot or `geom` for `{ggplot2}` [@R-ggplot2], specific calls to a database, etc. 
 
 These two components do not have to live together. 
 They should not live together if you want to keep your sanity when you build an app.
