--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -22,7 +22,7 @@ As you may know, a Shiny application is an interface (the front-end) used to com
 To start on solid ground, you need to build the two (front and back) seperately: 
 
 + On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions.... everything that does not rely on computation on the back end. 
-This "UI first" approach will be made possible for Shiny with notably one package, `{shinipsum}` [@R-shinipsum], and tools like basic CSS, and some `{golem}` functions.
+This "UI first" approach will be made possible for Shiny with notably one package, `{shinipsum}` [@R-shinipsum], and tools like basic CSS, and some `{golem}` [@R-golem] functions.
 
 + On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work. 
 For this point, you can use what we call a "Rmd-first" approach, by combining R functions with the writing of Vignettes that describes the internal of the application. 
