--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -53,7 +53,7 @@ They are behaving like that for a lot of reason, but notably because they want t
 
 `r right_link("Don't make me think - Steve Krug", "http://sensible.com/dmmt.html")`
 
-For example, let's have a look at the user interface of `hexmake` [@R-hexmake], a Shiny app for building hex stickers, available at https://connect.thinkr.fr/hexmake/
+For example, let's have a look at the user interface of `{hexmake}` [@R-hexmake], a Shiny app for building hex stickers, available at https://connect.thinkr.fr/hexmake/
 
 ![](img/hexmake.png)
 
@@ -136,8 +136,8 @@ Then the user has to restart from scratches, because there is no native way, fro
 This is a very important thing to keep in mind when building Shiny app: __once the app has failed, there is no easy way to natively get it back to the moment just before it crashed__, meaning that your users might lose a significant amount of time they have spent configuring the app.
 
 So, one good practice: try, as much as possible, to __wrap all server calls in some form of try-catch__ pattern. 
-That way, you can for example send a notification to the user if the process fails, either using `{shiny}` notification function, an external package like `{shinyalert}` [@R-shinyalert], or a custom JavaScript alert like [notify.js](https://github.com/ColinFay/notifyjsexample).
-Here is a pseudo-code pattern for this using the `{attempt}` package:
+That way, you can for example send a notification to the user if the process fails, either using ``{shiny}` [@R-shiny] notification function, an external package like `{shinyalert}` [@R-shinyalert], or a custom JavaScript alert like [notify.js](https://github.com/ColinFay/notifyjsexample).
+Here is a pseudo-code pattern for this using the `{attempt}` [@R-attempt] package:
 
 ```{r 06-ux-matters-2, eval = FALSE}
 library(shiny)
@@ -177,11 +177,11 @@ What is the difference between the two?
 So the first is that the app is designed in such a way that there is no learning curve to using it.
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds. 
 
-Let's for example get back to our `{tidytuesday201942}` application available at [connect.thinkr.fr/tidytuesday201942](https://connect.thinkr.fr/tidytuesday201942/)
+Let's for example get back to our `{tidytuesday201942}` [@R-tidytuesday201942] application available at [connect.thinkr.fr/tidytuesday201942](https://connect.thinkr.fr/tidytuesday201942/)
 By itself, this application is not self-evident: you need to have a series of background knowledge before understanding what this application was designed for. 
 For example, you might need to have a vague sense of what `tidytuesday` is. 
 If you do not, you will have to read the home text, which will help you understand what this is. 
-Then, if we have a look at the menu elements, we see that these are a series of functions from `{ggplot2}`: without any background about the package, you might find it difficult understanding what this app actually does.
+Then, if we have a look at the menu elements, we see that these are a series of functions from `{ggplot2}` [@R-ggplot2]: without any background about the package, you might find it difficult understanding what this app actually does.
 
 Yet, if you want to understand what this app is designed for, you will find enough information either on the home page or in the About section, with external links if needed. 
 And of course, when building apps, context matters. 
@@ -423,7 +423,7 @@ With this kind of graphs, users might lose some time focusing on understanding w
 
 Of course these features are awesome if you need them: exploring data interactively is a fundamental strength for an application when the context is right. 
 But if there is no solid reason for using an interactive table, use a standard HTML table. 
-In other words, do not make things interactive if there is no value in adding interactivity ; for example, if you have a small table and the users do not need to sort the table, filter, navigate in pages, `DT::datatable()` will add more visual noise than adding value to the application.
+In other words, do not make things interactive if there is no value in adding interactivity ; for example, if you have a small table and the users do not need to sort the table, filter, navigate in pages, `datatable()` from `{DT}` [@R-DT] will add more visual noise than adding value to the application.
 
 Adding interactivity widgets (in most cases) means adding visual elements to your original content: in other words, you are adding visual components that might distract the user from focusing on the content of the information.
 
@@ -586,7 +586,7 @@ And it is a rather common deficiency: according to [colourblindawareness.org](ht
 
 Keeping in mind this prevalence of color blindness is even more important in the context of Shiny, where we are developing data science products, which most of the time include data visualization. 
 If designed wrong, dataviz can be unreadable for some specific type of color blindness. 
-That is why we recommend using the `viridis` palette, which has been created to be readable by the most common types of color blindness. 
+That is why we recommend using the `viridis` [@R-viridis] palette, which has been created to be readable by the most common types of color blindness. 
 
 Here are for example a visualization through the lens of various type of color blindness: 
 
@@ -604,7 +604,7 @@ with_palette <- function(palette) {
 
 ```
 
-With the `jet.colors` palette from `{matlab}`
+With the `jet.colors` palette from `{matlab}` [@R-matlab]
 
 ```{r 06-ux-matters-11 }
 with_palette(matlab::jet.colors)
@@ -615,7 +615,7 @@ with_palette(viridis::viridis)
 ```
 
 Even without color-blindness, it's already way more readable.
-But let's now use the `{dichromat}` package to simulate color blindness.
+But let's now use the `{dichromat}` [@R-dichromat] package to simulate color blindness.
 
 ```{r 06-ux-matters-13 }
 library(dichromat)
