--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -55,7 +55,7 @@ The idea with concept maps is to take a piece of paper (or a digital tool), wher
 Drawing a concept map is a way to organize the knowledge of a specific topic.
 
 When doing this for a piece software, we are not trying to add technical details about the way things are implemented: we are listing down the various "actors" (the concepts) around our app, with the relationships they have. 
-For example, here is a very simple concept map of the `{hexmake}` app. 
+For example, here is a very simple concept map of the `{hexmake}` [@R-hexmake] app. 
 
 ![](img/hexmakemap.png)
 
@@ -96,7 +96,7 @@ Will they be using the app in their office, on their phone while driving a tract
 That might seems like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need less interactive things, bigger fonts, simpler interface, less details and more direct information. 
 If you are building a Shiny app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile. 
 And developing for mobiles requires a different kind of mindset^[
-For developing an app that is mobile first, you can have a look at the great [`{shinyMobile}`](https://rinterface.github.io/shinyMobile/) package, made by the amazing Rinterface team.
+For developing an app that is mobile first, you can have a look at the great `{shinyMobile}` [@R-shinyMobile] package, made by the amazing Rinterface team.
 ].
 
 Another good reason why talking to the users is an important step is that most of the time, people writing specifications are not the end users and will ask either too much features or not enough. 
