--- a/08-css.Rmd
+++ b/08-css.Rmd
@@ -214,26 +214,26 @@ What this tag will contain is these three elements:
 The first two are standard: you do not need to change them, they are necessary to indicate to the HTML page that you are creating a stylesheet, with the type being text/css.
 The `href` is the one you will need to change: this path points to where your style file is located. 
 
-If you are building your application with `{golem}`, the good news is that this file creation and linking is transparent: if you call `golem::add_css_file("name")`, a file will be created at `inst/app/www`, and this file will be automatically linked inside your UI thanks to the `bundle_resouces()` function. 
+If you are building your application with `{golem}` [@R-golem], the good news is that this file creation and linking is transparent: if you call `golem::add_css_file("name")`, a file will be created at `inst/app/www`, and this file will be automatically linked inside your UI thanks to the `bundle_resouces()` function. 
 
 ### Using R packages
 
 If you want to use external CSS template, there are several packages that exist that can do implement new custom UI designs for your application. 
 Here are some: 
 
-+ [`{resume}`](https://github.com/ColinFay/resume), provides an implementation of the [Bootstrap Resume Template](https://github.com/BlackrockDigital/startbootstrap-resume).
++ `{resume}`[@R-resume], provides an implementation of the [Bootstrap Resume Template](https://github.com/BlackrockDigital/startbootstrap-resume).
 
-+ [`{nessy}`](https://github.com/ColinFay/nessy), a port of [NES CSS](https://github.com/nostalgic-css/NES.css).
++ `{nessy}` [@R-nessy], a port of [NES CSS](https://github.com/nostalgic-css/NES.css).
 
-+ [`{skeleton}`](https://github.com/ColinFay/skeleton), [Skeleton CSS](http://getskeleton.com/).
++ `{skeleton}` [@R-skeleton], [Skeleton CSS](http://getskeleton.com/).
 
-+ [`{shinyMobile}`](https://github.com/RinteRface/shinyMobile), shiny API for Framework7 (IOS/android).
++ `{shinyMobile}` [@R-shinyMobile], shiny API for Framework7 (IOS/android).
 
-+ [`{shinydashboardPlus}`](https://github.com/RinteRface/shinydashboardPlus), extensions for shinydashboard.
++ `{shinydashboardPlus}` [@R-shinydashboardPlus], extensions for shinydashboard.
 
-+ [`{bs4Dash}`](https://github.com/RinteRface/bs4Dash), Bootstrap 4 shinydashboard using AdminLTE3.
++ `{bs4Dash}` [@R-bs4Dash], Bootstrap 4 shinydashboard using AdminLTE3.
 
-+ [`{fullPage}`](https://github.com/RinteRface/fullPage), fullPage.js, pagePiling.js and multiScroll.js for shiny.
++ `{fullPage}`[@R-fullPage], fullPage.js, pagePiling.js and multiScroll.js for shiny.
 
 And all the amazing things done at [RinteRface](https://github.com/RinteRface).
 
