--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -2,7 +2,7 @@
 
 # Setting up for success with `{golem}`
 
-Before starting to prototype and build anything, initialize a `{golem}` project! 
+Before starting to prototype and build anything, initialize a `{golem}` [@R-golem] project! 
 This will help you put your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it!
 
 The general workflow for "prototype and build" is the following: the project manager sets up a `{golem}` project, where the first steps are filled, the general structure, with Shiny module, is set, and then the project is registered to the version control system. 
@@ -85,7 +85,7 @@ golem::fill_desc(
 )   
 ```
 
-Then, call the `golem::set_golem_options()` function, it will add information to the `golem-config.yml` file, and notably set the `{here}` package root sentinel. 
+Then, call the `golem::set_golem_options()` function, it will add information to the `golem-config.yml` file, and notably set the `{here}` [@R-here] package root sentinel. 
 
 ### Set common Files 
 
