--- a/10-prototyping.Rmd
+++ b/10-prototyping.Rmd
@@ -22,13 +22,13 @@ You have heard a lot that if you are copying and pasting something more than twi
 And with Shiny, if you are writing a piece of the app more than twice, you should write modules. 
 But while these kind of abstractions are elegant and optimized, they can make the software harder to work on while building it. 
 So before focusing on turning something into a function, make it work first. 
-As said in [R for Data Science](https://r4ds.had.co.nz/) about abstraction with `{purrr}`: 
+As said in _R for Data Science_ [@hadleywickham2017] about abstraction with `{purrr}` [@R-purrr]: 
 
 > Once you master these functions, you’ll find it takes much less time to solve iteration problems. But you should never feel bad about using a for loop instead of a map function. The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work. The important thing is that you solve the problem that you’re working on, not write the most concise and elegant code (although that’s definitely something you want to strive towards!).
 
 `r right_link("R for Data Science - 21.5 The map functions", "https://r4ds.had.co.nz/iteration.html")`
 
-As a small example, we can refer to the binding module from `{hexmake}`: this module manipulates namespaces, inputs and `session` to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)). 
+As a small example, we can refer to the binding module from `{hexmake}` [@R-hexmake]: this module manipulates namespaces, inputs and `session` to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)). 
 That's an elegant solution: instead of duplicating content, we use functions to automatically bind events.
 But that is a higher level of abstraction: we manipulate different levels of namespacing and inputs, making it harder to reason about when you have to change the code base. 
 
@@ -71,12 +71,12 @@ In other words, it is easier to be told "you will be working on the 'Summary' pa
 
 ## Prototyping Shiny
 
-In the next section, you will be introduced to two packages that can be used when prototyping user interface: `{shinipsum}` and `{fakir}`.
+In the next section, you will be introduced to two packages that can be used when prototyping user interface: `{shinipsum}` [@R-shinipsum] and `{fakir}` [@R-fakir].
 
 ### Fast UI Prototyping with `{shinipsum}`
 
 When prototyping the UI for an application, we will not be focusing on building the actual computation: what we need is creating a draft with visual components, so that we can have visual clues about the end result. 
-To do that, you can use the `{shinipsum}` package, which has been designed to generate random shiny elements.
+To do that, you can use the `{shinipsum}` package, which has been designed to generate random `{shiny}` [@R-shiny] elements.
 If you are familiar with "lorem ipsum", the fake text generator that is used in software design as a placeholder for text, the idea is the same: generating placeholders for Shiny outputs. 
 
 You can install this package from GitHub with:
@@ -86,7 +86,7 @@ remotes::install_github("Thinkr-open/shinipsum")
 ```
 
 In this package, a series of functions that generates random placeholders. 
-For example, `random_ggplot()` generates random `{ggplot2}` elements. 
+For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements. 
 If we run this code two time, we should get different results^[
 Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
 ]:
@@ -178,7 +178,7 @@ fake_visits(from = "2017-01-01", to = "2017-01-31")
 ```
 
 The idea with these datasets is to combine various formats that can reflect "real life" datasets: they contain dates, numeric and character variables, and have missing values. 
-They can also be manipulated with the included `{sf}` geographical dataset `fra_sf` allowing for maps creation.  
+They can also be manipulated with the included `{sf}` [@R-sf] geographical dataset `fra_sf` allowing for maps creation.  
 
 Fake datasets created with `{fakir}` can be used to build light examples on the use of the inputs, for filters or interactive map, or as examples for the internal functions and their corresponding documentation. 
 
@@ -217,9 +217,9 @@ And also, developing in multiple Rmd files helps the separation of work between 
 
 ### Rmd, Vignettes, and documentation first
 
-Working with the `{golem}` framework implies that you will build the application as an R package. 
+Working with the `{golem}` [@R-golem] framework implies that you will build the application as an R package. 
 And of course, an R package implies writing documentation: one of the main goals of the Vignettes, in an R package, is to document how to use the package. 
-And the good news is that when checking a package, _i.e_ when running `devtools::check()` or `R CMD check`, the Vignettes are going to be built, and the process will fail if at least one of the Vignette fails to render. 
+And the good news is that when checking a package, _i.e_ when running `check()` from `{devtools}` [@R-devtools] or `R CMD check`, the Vignettes are going to be built, and the process will fail if at least one of the Vignette fails to render. 
 That way, you can use the documentation of the back-end as an extra tool for doing unit-testing!
 
 One radical approach to the "Rmd first" philosophy is to write __everything__ in an Rmd from the very beginning of your project: write the function code, there roxygen tags, their tests, etc, then move everything to the correct spot in the package infrastructure once you are happy with everything. And of course, when you need to add another feature to your app, open a new markdown and start the process of development and documentation again. 
