--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -2,7 +2,7 @@
 
 # Building app with `{golem}` {#stepbuild}
 
-Now that the application is prototyped inside a `{golem}` skeleton, you can now work on the integration of the application. 
+Now that the application is prototyped inside a `{golem}` [@R-golem] skeleton, you can now work on the integration of the application. 
 
 This parts encompasses the integration of the back-end/front-end, together, and working on the software engineering task of the application:
 
@@ -21,7 +21,7 @@ Every time you add a new dependency, you can add it with:
 usethis::use_package("pkg")
 ```
 
-Note that all the explicitly namespaced calls (_i.e_ `pkg::fun`) can be scraped using the `{attachment}` package:
+Note that all the explicitly namespaced calls (_i.e_ `pkg::fun`) can be scraped using the `{attachment}` [@R-attachment] package:
 
 ```{r 11-step-by-step-build-2, eval = FALSE}
 attachment::att_from_rscripts()
