--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -194,7 +194,7 @@ You can find more under these links:
 
 ## Automated testing
 
-We have seen in the chapter \@ref(step-secure) how to build a testing infrastructure for your app, notably using the `{testthat}` package. 
+We have seen in the chapter \@ref(step-secure) how to build a testing infrastructure for your app, notably using the `{testthat}` [@R-testthat] package. 
 What we have described is a way to build it locally, before running your test on your own machine. 
 But there is a big flaw to this approach: you have to remember to run the tests, be it regularly or before making a pull request/pushing to the server. 
 To do this kind of job, you will be looking for a tool to do automated testing at the repository level: in other words, a software that can test your application whenever a piece of code is pushed/moved on the repository.
@@ -212,7 +212,7 @@ Travis CI can do a lot more than just testing your app: it can be used to build 
 And the nice thing is that you can test for various versions of R, so that you are sure that you are supporting current, future and previous versions of R. 
 
 All of this is defined in the `.travis.yml` file, which is to be put at the root of your source directory, a file that is automatically generated when calling `usethis::use_travis()`.
-Here is an example of one of this file, for the `{golem}` package:
+Here is an example of one of this file, for the `{golem}` [@R-golem] package:
 
 ```{r 13-secure-3, echo = FALSE,warning=FALSE, comment=""}
 readLines("https://raw.githubusercontent.com/ThinkR-open/golem/dev/.travis.yml") %>% 
@@ -232,7 +232,7 @@ As with Travis CI, these actions are defined in a `yaml` file.
 Examples for these configuration can be find at [r-lib/actions](https://github.com/r-lib/actions). 
 
 If you are working with GitLab, you can use the integrated `GitLab CI` service: it serves the same purpose, with the little difference that it is completely docker-based: you define a `yaml` with a series of stages that are performed (concurrently or sequentially), and they are all launched inside a docker container. 
-To help you with this, the [`colinfay/r-ci-tidyverse`](https://hub.docker.com/r/colinfay/r-ci-tidyverse) docker image comes with pre-installed packages for testing: `{remotes}`, `{testthat}`, `{vdiffr}`, `{config}`... and is available for several R versions. 
+To help you with this, the [`colinfay/r-ci-tidyverse`](https://hub.docker.com/r/colinfay/r-ci-tidyverse) docker image comes with pre-installed packages for testing: `{remotes}` [@R-remotes], `{testthat}` [@R-testthat], `{config}` [@R-config]... and is available for several R versions. 
 This docker image can be used as the source image for your `GitLab CI` yaml file. 
 
 Here is an example of one of these files
