--- a/14-deploy-with-golem.Rmd
+++ b/14-deploy-with-golem.Rmd
@@ -7,7 +7,7 @@
 Once your app is built, you are ready to deploy it! 
 In other words, your software is now ready to be used by other users, be it from 
 There are two main ways to share your application and make it available to others: by creating a package and making it installable, or by sending it to a remote server. 
-We'll see in this part how you can do that using `{golem}`. 
+We will see in this part how you can do that using `{golem}` [@R-golem]. 
 
 ## Before deployment Check-list 
 
@@ -52,7 +52,7 @@ Then, try the `run_app()` function to check that the app can be launched.
 
 Building an app as a package also means that this app can be bundled into an archive, and then shared, either as is or using a package repository like the CRAN.  
 
-To do that, you first need an bundled version of your app, which can be created using the `pkgbuild::build()` function in the same working directory as your application. 
+To do that, you first need an bundled version of your app, which can be created using the `build()` function from `{pkgbuild}` [@R-pkgbuild] in the same working directory as your application. 
 Calling this function wîll create a .tar.gz file that is called `mygolem_0.0.1.tar.gz` (of course with the name of your package). 
 Once you have this `tar.gz`, you can send it to your favorite package repository.
 
