--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -9,7 +9,7 @@ This process is invisible to most Shiny developers, who usually do everything in
 
 In fact, when you are writing UI elements in Shiny, __what you are actually doing is building a series of HTML tags__. 
 
-For example, this simple `{shiny}` code returns a series of HTML tags: 
+For example, this simple `{shiny}` [@R-shiny] code returns a series of HTML tags: 
 
 ``` r
 fluidPage(
@@ -50,13 +50,13 @@ All these things are good examples of where you should be using JavaScript inste
 
 Moreover, the number of JavaScript libraries available on the web is tremendous ; and the good news is that Shiny has everything it needs to bundle external JavaScript libraries inside your application^[
 This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application. 
-See for example [`{glouton}`](https://github.com/ColinFay/glouton), which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
+See for example `{glouton}` [@R-glouton], which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
 ].
 
 This is what this section of the book aims at: giving you just enough JavaScript knowledge to lighten your Shiny App, in order to improve the global user and developer experience.
 In this chapter, we will first review some JavaScript basics which can be used "client-side" only, i.e. only in your browser.
 Then, we will talk about making R & JS communicate with each other, and explore some common patterns for JavaScript in Shiny. 
-Finally, we will quickly present some of the functions available in `{golem}` that can be used to launch JavaScript.
+Finally, we will quickly present some of the functions available in `{golem}` [@R-golem] that can be used to launch JavaScript.
 
 > Note that this chapter does not try to be a comprehensive JavaScript course. 
 External resources are linked all throughout this chapter and at the end if you want to dive deeper into JavaScript.
@@ -261,7 +261,7 @@ Though it will help making it lighter in term of code and easier to grasp in ter
 
 + `alert("message")` uses the built-in alert-box mechanism from the user's browser (i.e., the `alert()` function is not part of `jQuery` but it is built inside the user's browser).
 It works well as it relies on the browser instead of relying on R or on a specific JavaScript library. 
-You can use this functionality to replace a call to `{shinyalert}`: the result is a little less aesthetically pleasing, but that is easier to implement and maintain.
+You can use this functionality to replace a call to `{shinyalert}` [@R-shinyalert]: the result is a little less aesthetically pleasing, but that is easier to implement and maintain.
 
 + `var x = prompt("this", "that");` this function opens the built-in prompt, which is a text area where the user can input text. 
 With this code, when the user clicks "OK", the text is stored in the `x` variable, which you can then send back to R (see further part down this chapter for more info on how to do that). 
@@ -360,7 +360,7 @@ server <- function(input, output, session){
 shinyApp(ui, server)
 ```
 
-You can find a real Life example of this `tagAppendAttributes` in the `{tidytuesday201942}` app: 
+You can find a real Life example of this `tagAppendAttributes` in the `{tidytuesday201942}` [@R-tidytuesday201942] app: 
 
 + [R/mod_dataviz.R#L109](https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L109), where the click on the plot generates the creation of a Shiny input (we will see this below)
 
@@ -566,6 +566,7 @@ Listening on http://127.0.0.1:5495
 ── Last plot clicked: ─────────────────────────────────────────────
 [1] "plopb"
 ```
+
 __Important note__: if you are using modules, you will need to pass the namespacing of the `id` to be able to get it back from the server. 
 This can be done using the `session$ns` function, which comes by default in any golem-generated module. 
 In other words, you will need to write something like:
@@ -669,7 +670,7 @@ See `?golem::activate_js` for a full list of built-in functions.
 
 ## Learn more about JavaScript
 
-If you want to interact straight from R with NodeJS (JavaScript in the terminal), you can try the `{bubble}` package. 
+If you want to interact straight from R with NodeJS (JavaScript in the terminal), you can try the `{bubble}` [@R-bubble] package. 
 Be aware that you will need to have a working NodeJS installation on your machine. 
 
 It can be installed from GitHub
