--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -21,7 +21,7 @@ And that is probably one of the main reason why this package has become so succe
 The first version of `{shiny}` was published in 2012. 
 Since then, it has been one of the top project of the RStudio team. 
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors. 
-It is now downloaded around 400K times a month, according to [cranlogs](https://cranlogs.r-pkg.org/badges/shiny), and has `r length(devtools::revdep("shiny"))` reverse dependencies (i.e packages that depend on it), according to `devtools::revdep("shiny")`.
+It is now downloaded around 400K times a month, according to [cranlogs](https://cranlogs.r-pkg.org/badges/shiny), and has `r length(devtools::revdep("shiny"))` reverse dependencies (i.e packages that depend on it), according to `revdep("shiny")` from `{devtools}` [@R-devtools].
 
 If you are very new to Shiny, this book might feel a little bit overwhelming: we will be discussing some advance `{shiny}` production methods, best practices and structural idea for sending Shiny applications to production. 
 This books relies on the assumption that you already know how to build basic Shiny applications, and that you want to push your Shiny skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
@@ -63,7 +63,7 @@ Let's dive a little bit more in these two type of complexity.
 
 #### Developers complexity
 
-An app is to be considered complex when it is so large in terms of size and functionality that it makes it impossible to reason about it at once, and developer must rely on tools and methods to understand and handle this complexity: for example, when it comes to `{shiny}`, you will rely on tools like the `{golem}` framework, introduced all along this book, to handle some implementation, development and deployment complexity.
+An app is to be considered complex when it is so large in terms of size and functionality that it makes it impossible to reason about it at once, and developer must rely on tools and methods to understand and handle this complexity: for example, when it comes to `{shiny}`, you will rely on tools like the `{golem}` [@R-golem] framework, introduced all along this book, to handle some implementation, development and deployment complexity.
 This book will introduce a clear methodology that comes with a series of conventions, which are crucial when it comes to building and maintaining complex systems: by imposing a formalized structure for a software, it enhances its readability, lower the learning curve for new-comers, and reduces the risk of errors inherent to repetitive tasks.
 
 This type of complexity is called _implementation complexity_. 
@@ -136,7 +136,7 @@ Note though that some users find using the pipe more complex than not.
 For example, the two following pieces of code do the same thing. 
 Both have a different number of lines, and a different level of reading complexity.
 
-```{r 01-big-shiny-1}
+```{r 01-big-shiny-1 }
 library(dplyr, warn.conflicts = FALSE)
 # With pipe
 iris %>%
@@ -374,7 +374,7 @@ frame_shiny <- readr::read_rds(here::here("dataset", "frame_shiny.rds"))
 knitr::kable(frame_shiny)
 ```
 
-If you are building you Shiny application with `{golem}`, you can use the `DESCRIPTION` file, which contains the list of dependencies, as a starting point to explore these metrics for your dependencies: 
+If you are building you Shiny application with `{golem}`, you can use the `DESCRIPTION` file, which contains the list of dependencies, as a starting point to explore these metrics for your dependencies, for example using `{desc}` [@R-desc] or `{attachment}` [@R-attachment]:
 
 ```{r 01-big-shiny-27 }
 desc::desc_get_deps("golex/DESCRIPTION")
