--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -155,7 +155,7 @@ This piece of the `app_ui.R` is designed to received the counterpart of what you
 Everything here is to be put after the <code>`r readLines("golex/R/app_ui.R")[11]`</code> line. 
 Just as with their server counterparts, the UI side of these elements are the one from the bottom of the file you are creating with `golem::add_module()`.
 
-By default, `{golem}` uses a `fluidPage()`, which is `{shiny}` most commonly used template. 
+By default, `{golem}` uses a `fluidPage()`, which is `{shiny}` [@R-shiny] most commonly used template. 
 If ever you want to use `navBarPage()`, this is where you will define this: replace one with the other, and you will be good to go. 
 You can also define any other template page, for example with an `htmlTemplate()`. 
 Keep in mind that removing the `fluidPage()` here implies that there is no available CSS/JS template to be used anymore, and you will need to be adding your own there. 
